--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
+html, body, .container {
+  margin: 0;
+  padding: 0;
+}
+
 
 
 .navbar {
@@ -10,6 +15,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   box-shadow: 1px 6px 6px 0px rgba(50, 50, 50, 0.75);
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px;
+  padding-top: 10px;
   width: 100%;
   overflow: auto;
 }
@@ -23,11 +29,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .navbar a:hover {
-  background-color: #000;
+  background-color: rgba(182, 240, 208, 0.767);
 }
 
 .active {
-  background-color:rgba(50, 50, 50, 0.75);
+  background-color:rgba(28, 35, 30, 0.5);
+  border-radius: 5px;
 }
 
 .about-section {
@@ -79,14 +86,6 @@ tr:nth-child(even) {
 
 }
 
-.navbar-toggle {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  cursor: pointer;
-  color: rgba(255, 255, 255, 0.8);
-  font-size: 18px;
-}
 .btn {
   border: none; /* Remove borders */
   color: white; /* Add a text color */
